# auren

./: .env.example  .gitignore  .pre-commit-config.yaml  DECISIONS.md  README.md  conftest.py  pyproject.toml
config/: config.yaml
data/: performance_history.json  study_materials.json  upcoming_tests.json
data/synthetic/: injection_fixtures.json  manifest.yaml  study_materials_extended.json
eval/: __init__.py  adversarial_queries.yaml  context_audit.py  golden_dataset.yaml  mode_scorecard.py  phase1_cases.jsonl  phase1_graded.json  phase1_merged.json  phase1_results_deterministic.jsonl  phase1_results_hybrid.jsonl  phase1_results_llm.jsonl  phase1_runner.py  run_eval.py  sample_queries.yaml
scripts/: __init__.py  build_index.py  generate_synthetic_data.py
src/: cli.py
src/llm/: agentic.py  base.py  deterministic.py  ollama_client.py  openrouter_client.py  prompts.py
src/memory/: cache.py  mastery.py  reflection.py  store.py
src/orchestrator/: context_assembler.py  grounding.py  pipeline.py  router.py  validator.py
src/retrieval/: embedder.py  indexer.py  vector_store.py
src/tools/: base.py  get_performance_summary.py  get_upcoming_tests.py  get_weak_topics.py  log_feedback.py  recommend_study_material.py  registry.py
src/utils/: config.py  data_loader.py  dates.py  logging_config.py  subjects.py
tests/: conftest.py
tests/mode_deterministic/: conftest.py  test_deterministic_adversarial.py  test_deterministic_context_safety.py  test_deterministic_e2e.py  test_deterministic_routing.py  test_known_results.py
tests/mode_hybrid/: conftest.py  (+6 more)
(+30 files in other folders)
