[project]
name = "auren"
version = "0.1.0"
description = "Auren — a self-improving student learning assistant (CLI), evaluating three pipeline approaches: deterministic, hybrid, and end-to-end LLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
]


[project.optional-dependencies]
local = []          # kept for backwards-compatible `uv sync --extra local`
vector = []         # kept for backwards-compatible `uv sync --extra vector`

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[project.scripts]
auren = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
